--- a/_publications/2023_cad.md
+++ b/_publications/2023_cad.md
@@ -9,12 +9,12 @@ authors: "R. Hesse, S. Schaub-Meyer, S. Roth"
 uri: 
 project: 
 bibtex:
-arxiv: https://arxiv.org/abs/2305.09504
-openpdf: 
-supp: 
+arxiv: 
+openpdf: https://openaccess.thecvf.com/content/CVPR2023W/ECV/papers/Hesse_Content-Adaptive_Downsampling_in_Convolutional_Neural_Networks_CVPRW_2023_paper.pdf
+supp: https://openaccess.thecvf.com/content/CVPR2023W/ECV/supplemental/Hesse_Content-Adaptive_Downsampling_in_CVPRW_2023_supplemental.pdf
 teaser: images/2023_cad.png
 videoresults: 
-videotalk: 
-poster: 
+videotalk: https://www.youtube.com/watch?v=E4iJPpWaJso
+poster: https://github.com/visinf/cad/blob/main/poster.jpeg
 code: https://github.com/visinf/cad/
 ---
