--- a/_publications/2023_mint.md
+++ b/_publications/2023_mint.md
@@ -8,8 +8,8 @@ authors: "A. Younes, S. Schaub-Meyer, G. Chalvatzaki"
 uri: 
 project: https://sites.google.com/view/mint-kp
 bibtex:
-arxiv: https://arxiv.org/abs/2209.15404
-openpdf: 
+arxiv: 
+openpdf: https://openreview.net/pdf?id=9mGbxC4QiI
 supp: 
 teaser: images/2023_mint.gif
 videoresults: 
