--- a/_publications/2023_cad.md
+++ b/_publications/2023_cad.md
@@ -3,8 +3,7 @@ title: "Content-Adaptive Downsampling in Convolutional Neural Networks"
 collection: publications
 permalink: /publication/2023-cad
 date: 2023-06-19
-venue: "CVPRW 2023 - Efficient Deep Learning for Computer Vision
- CVPR Workshop"
+venue: "CVPR 2023 Workshop: Efficient Deep Learning for Computer Vision"
 authors: "R. Hesse, S. Schaub-Meyer, S. Roth"
 uri: 
 project: 
