--- a/_publications/2025_emat.md
+++ b/_publications/2025_emat.md
@@ -4,7 +4,7 @@ collection: publications
 permalink: /publication/2025-emat
 date: 2025-09-24
 venue: "GCPR"
-venue: "ICCV Workshop: Representation Learning with Very Limited Resources: When Data, Modalities, Labels, and Computing Resources are Scarce (LIMIT)"
+venue2: "ICCV Workshop: Representation Learning with Very Limited Resources: When Data, Modalities, Labels, and Computing Resources are Scarce (LIMIT)"
 authors: "D. Carrión-Ojeda, S. Roth, S. Schaub-Meyer"
 oral: 
 award: 
